resuming on dell laptop

--- a/notebooks/texts_exploration_A.ipynb
+++ b/notebooks/texts_exploration_A.ipynb
@@ -618,7 +618,7 @@
    "source": [
     "# save the texts file as a csv\n",
     "\n",
-    "texts.to_csv('texts_aka_compressed_documents.csv')"
+    "texts.to_csv('texts_aka_compressed_documents.csv')\n"
    ]
   },
   {
